frontend/html/static/css/style.css
body {
    margin: 30px;
}

* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

input[type="text"], input[type="number"], select {
    box-sizing: border-box;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 5px;
    display: block; /* Make input elements block-level */
    width: 100%; /* Make input elements take full width of their container */
}

label:not([for="has_funding"]) {
    display: block; /* Make label elements block-level */
    margin-bottom: 5px; /* Add some space below the labels */
}

.checkboxContainer {
    display: flex;
    flex-direction: column;
    div {
        margin-bottom: 5px;
    }
}

button, a.button {
    padding: 11px 20px;
    font-size: 16px;
    background-color: #ededed;
    text-decoration: none;
    color: black;
    font-weight: normal;
    border: 1px solid #ccc;
    border-radius: 5px;
    cursor: pointer;
    transition: filter 0.3s;
}

button[type="submit"] {
    border: none;
    background-color: #007bff;
    color: white;
    margin-top: auto;
}

button:hover, a.button:hover {
    filter: brightness(90%);
}

.hidden {
    display: none !important;
}

#resultsHeading {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.result {
    /* Add space between results */
    margin-bottom: 20px;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
    border-radius: 10px;
    padding: 30px;
}

.searchResult {
    padding-top: 10px;
}

.inputContainer {
    width: 300px; /* Set a specific width */
    margin: 0 10px 10px 0; /* Add right and bottom margin */
}

#searchForm {
    display: flex;
    align-items: center;
    flex-wrap: wrap; /* Allow wrapping to the next line if necessary */
}


details.truncated[open] > summary > span {
    display: none;
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: #222;
        color: white;
    }

    input[type="text"], input[type="number"], select {
        background-color: #444;
        color: white;
    }

    button[type="submit"] {
        background-color: #0056b3;
    }

    .result {
        background-color: #444;
    }

    a {
        color: #75b7fd;
    }
}

